# rentivo

./: .dockerignore  .env.db.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cli  Dockerfile.worker  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.next.remote.yml  docker-compose.next.yml  docker-compose.yml  healthcheck.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: deploy.yml  prepare-legacy-rollback.yml  release.yml  rollback.yml  test-pr.yaml
.superpowers/sdd/: task-3-report.md
alembic/: env.py
alembic/versions/: 08c21e96caa6_add_recibo_pdf_path_to_bills.py  0aad121e50b3_add_readjustment_to_billings.py  163e815b0479_merge_reminders_recipient_phone_and_.py  218ffaa712e2_add_pdf_render_status_to_bills.py  268d02b96390_add_mfa_tables.py  2f30089b2082_widen_pix_columns_for_encryption.py  47d044b7cc72_drop_username.py  4f9c607d1056_create_password_reset_tokens.py  51f6a33c87b3_create_billing_attachments.py  71fda335fac0_add_pix_merchant_to_owners_and_billings.py  9a1c5b3f7e62_create_known_devices.py  a1b2c3d4e5f6_add_uuid_to_billings_and_bills.py  a7b8c9d0e1f2_replace_uuid4_with_ulid.py  b1c2d3e4f5a6_add_email_to_users.py  b2c3d4e5f6a7_add_deleted_at_to_billings.py  b3f1c0a2d4e5_add_reminders_enabled_to_billings.py  b7e2c4a9d1f0_add_phone_to_billing_recipients.py  c1d2e3f4a5b6_merge_reminders_and_recipient_phone_heads.py  c2d3e4f5a6b7_add_ownership_to_billings.py  c3d4e5f6a7b8_add_due_date_to_bills.py  c4d5e6f7a8b9_add_pix_reconciliation_and_webhook_events.py  c70fabec2b76_email_unique_required.py  ca7e47b1ebdf_create_expenses.py  d0263f759784_add_pix_key_to_billings.py  d1e0a883d14a_add_bill_status.py  d3e4f5a6b7c8_create_organizations.py  d4e5f6a7b8c9_create_users.py  d74d94c5ff3c_create_jobs_table.py  e0a39c4eb167_initial_schema.py  e4f5a6b7c8d9_create_invites.py  e5f6a7b8c9d0_add_paid_at_to_bills.py  e839f3b2d42e_create_billing_reply_to.py  ed5a99b2fe74_add_email_hash_and_widen_email.py  f3035fd3adb9_create_communication_templates.py  f6a7b8c9d0e1_add_deleted_at_and_fix_uuid_type.py  f7b8c9d0e1f2_create_audit_logs.py  f7ca33fe6c75_merge_expenses_and_billing_recipients_.py  g1h2i3j4k5l6_add_mfa_tables.py
backend/: Dockerfile.api  Dockerfile.legacy  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/legacy_web/: analytics.py  app.py  auth.py  bill_transitions.py  context.py  csrf.py  deps.py  flash.py  forms.py  guards.py  login_flow.py  receipts.py  services_container.py
backend/rentivo/: analytics.py  constants.py  context.py  db.py  logging.py  origins.py  pii_redaction.py  settings.py
backend/tests/: conftest.py  test_alembic_heads.py  test_analytics.py  test_api_key_migration.py  test_api_scopes.py  test_auth_challenge_migration.py  test_auth_rate_limit_migration.py  test_bill_concurrency_migration.py  test_bill_transitions.py  test_billing_item_uuid_migration.py  test_constants.py  test_db.py  test_env_example.py  test_expense_model.py  test_logging.py  test_passkey_usage_timestamp_migration.py  test_pii_redaction.py  test_preview_infrastructure.py  test_production_infrastructure.py  test_relax_user_fks_migration.py  test_settings.py
billing/: __main__.py  db.py  pix.py  settings.py
docs/: configuration.md  development.md  jobs.md  observability.md
frontend/: Dockerfile  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ios/: Package.resolved  Package.swift
landlord/: constants.py  db.py  settings.py
rentivo/: __main__.py  blind_index.py  constants.py  db.py  logging.py  pii_redaction.py  pix.py  settings.py  whatsapp.py
scripts/: seed_parity_fixtures.py  smoke-production-stack.sh  sync-ios-openapi.sh  tag_history.sh
tests/: conftest.py  test_blind_index.py  test_constants.py  test_dashboard_settings.py  test_db.py  test_env_example.py  test_healthcheck.py  test_logging.py  test_parse_brl_rounding.py  test_pix.py  test_pix_validation.py  test_settings.py  test_settings_bcb.py  test_whatsapp.py
web/: analytics.py  app.py  auth.py  bill_transitions.py  context.py  csrf.py  deps.py  flash.py  forms.py  guards.py  login_flow.py  receipts.py  request_scope.py  services_container.py
(+1015 files in other folders)
