[project]
name = "rentivo"
version = "0.1.0"
description = "Apartment billing management and invoice generation"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.1.0,<3",
    "rich>=13.0,<14",
    "fpdf2>=2.8,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "alembic>=1.18,<2",
    "qrcode[pil]>=8.0,<9",
    "bcrypt>=4.0,<5",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2,<3",
    "python-json-logger>=3.0,<4",
    "python-ulid>=3.0,<4",
    "mysqlclient>=2.2,<3",
    "boto3>=1.35,<2",
    "pypdf>=5.0,<6",
    "pyotp>=2.9,<3",
    "webauthn>=2.0,<3",
]

[tool.setuptools.packages.find]
include = ["rentivo*", "web*"]

[project.optional-dependencies]
s3 = ["boto3>=1.35,<2"]
dev = [
    "ruff>=0.9,<1",
    "pre-commit>=4.0,<5",
]
test = [
    "pytest>=8.0,<9",
    "pytest-cov>=6.0,<7",
    "pytest-xdist>=3.0,<4",
    "httpx>=0.27,<1",
    "freezegun>=1.4,<2",
    "boto3>=1.35,<2",
    "faker>=33.0,<34",
]

[project.scripts]
rentivo = "rentivo.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["rentivo", "web"]
omit = ["rentivo/__main__.py", "rentivo/scripts/seed.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
