[project]
name = "rentivo"
version = "0.1.0"
description = "Apartment billing management and invoice generation"
requires-python = ">=3.14"
dependencies = [
    "questionary>=2.1.0,<3",
    "rich>=13.0,<16",
    "fpdf2>=2.8,<3",
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "alembic>=1.18,<2",
    "qrcode[pil]>=8.0,<9",
    "bcrypt>=4.0,<6",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2,<3",
    "python-json-logger>=3.0,<5",
    "python-ulid>=3.0,<4",
    "structlog>=24.1,<26",
    "pymysql>=1.1,<2",
    "boto3>=1.35,<2",
    "pypdf>=5.0,<7",
    "pyotp>=2.9,<3",
    "webauthn>=2.0,<3",
]

[tool.setuptools.packages.find]
include = ["rentivo*", "web*"]

[project.optional-dependencies]
s3 = ["boto3>=1.35,<2"]
dev = [
    "ruff>=0.9,<1",
    "pre-commit>=4.0,<5",
]
test = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=6.0,<8",
    "pytest-xdist>=3.0,<4",
    "httpx>=0.27,<1",
    "freezegun>=1.4,<2",
    "boto3>=1.35,<2",
    "faker>=33.0,<41",
]

[project.scripts]
rentivo = "rentivo.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["rentivo", "web"]
omit = [
    "rentivo/__main__.py",
    "rentivo/scripts/seed.py",
    "rentivo/jobs/sqlalchemy.py",
    "rentivo/workers/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
